# ckb-bitcoin-spv

./: .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
docs/: Design.md
prover/: Cargo.toml
prover/src/: block.rs  dummy_service.rs  lib.rs  result.rs  utilities.rs
prover/src/tests/: block.rs  mod.rs  service.rs
verifier/: Cargo.toml
verifier/schemas/: types.mol
verifier/src/: constants.rs  error.rs  lib.rs  log.rs
verifier/src/tests/: bitcoin.rs  data.rs  mod.rs  signet.rs  testnet.rs  utilities.rs
verifier/src/types/: core.rs  mod.rs  prelude.rs
verifier/src/types/conversion/: mod.rs  pack.rs  unpack.rs
verifier/src/types/extension/: mod.rs  packed.rs
verifier/src/utilities/: bitcoin.rs  mmr.rs  mod.rs
