[package]
name = "ckb-bitcoin-spv-prover"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2021"
license = "MIT"
description = "Bitcoin simplified payment verification (the prover part)."
homepage = "https://github.com/ckb-cell/ckb-bitcoin-spv"
repository = "https://github.com/ckb-cell/ckb-bitcoin-spv"

[dependencies]
ckb-bitcoin-spv-verifier = { version = "0.1.0", path = "../verifier" }
bitcoin = { version = "0.31", features = ["serde"] }

thiserror = "1.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
walkdir = "2.4"
