[package]
name = "ckb-bitcoin-spv-verifier"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2021"
license = "MIT"
description = "Bitcoin simplified payment verification (the verifier part)."
homepage = "https://github.com/ckb-cell/ckb-bitcoin-spv"
repository = "https://github.com/ckb-cell/ckb-bitcoin-spv"

[dependencies]
bitcoin = { version = "0.31", default-features = false }
bitcoin_hashes = { version = "0.13", default-features = false }
primitive-types = { version = "0.12.2", default-features = false }
molecule = { version = "=0.7.5", default-features = false }
ckb-mmr = { version = "0.6", default-features = false, package = "ckb-merkle-mountain-range" }
log = { version = "0.4", optional = true }

[dev-dependencies]
ckb-jsonrpc-types = "0.115.0"
ckb-types = "0.115.0"
env_logger = "0.11"
serde_json = "1.0"
walkdir = "2.4"

[features]
default = ["std"]
std = [
    "bitcoin/std",
    "bitcoin_hashes/std",
    "primitive-types/std",
    "molecule/std",
    "ckb-mmr/std",
    "log",
]
no-std = [
    "bitcoin/no-std",
]
